fix: navbar overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -572,12 +572,13 @@ mobile-menu-open {
 }
 
 .mobile-navbar-nav {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 .mobile-nav-item {
   opacity: 0;
+
   transform: translateX(20px);
   transition: all 0.3s ease-out;
 }
@@ -607,6 +608,7 @@ mobile-menu-open {
 /* Active state styling */
 .mobile-nav-link[aria-expanded="true"] {
   background-color: rgba(255, 255, 255, 0.1);
+  padding-right: 18px;
 }
 /* mobile nav end */
 
